<resources>
    <string name="app_name">PurchaseList</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="accountTitle">Purchase Lists</string>
    <string name="list_title">New List </string>
    <string name="create_purchase_dialog_title">Addition of Item</string>
    <string name="rename">Changing of Title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="list_dialog_name_hint">Enter name of the List</string>
    <string name="purchase_dialog_name_hint">Name of product</string>
    <string name="save">Save</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price: </string>
    <string name="zero">0</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lists">My Lists</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log Out</string>
    <string name="navigator">Navigation Drawer</string>
    <string name="additionally">Additionally</string>
    <string name="today">Today</string>
    <string name="pref_font">Scale</string>
    <string name="pref_exp_font">Change the title scale for lists</string>
    <string name="pref_exp_show_quantity_in_list">Show the number of products in the list</string>
    <string name="pref_exp_purch_font">Change scale for purchases</string>
    <string name="pref_show_quant">Show quantity</string>
    <string name="pref_exp_show_quant">Show quantity of purchases</string>
    <string name="pref_show_price">Show price</string>
    <string name="pref_exp_price">Show price of purchases</string>
    <string name="pref_markable">Mark purchases</string>
    <string name="pref_exp_markable">Mark purchased products</string>
    <string name="purchases">Purchases</string>
    <string name="chat">Chat</string>
    <string name="font_chang">Font changing</string>
    <string name="exit">Exit</string>
    <string name="yesterday">Yesterday</string>
    <string name="face_bracket">(</string>
    <string name="back_bracket">)</string>
    <string name="total">Total</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="emailAuth">Email...</string>
    <string name="passwordAuth">Password...</string>
    <string name="userNameAuth">Your original nickname...</string>
    <string name="personsList">Persons</string>
    <string name="delete_all">Delete All </string>
    <string name="from">from </string>
    <string name="invitations">Invitations</string>
    <string name="action_search">search</string>


    <string-array name="font_array_entries">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

    <string-array name="font_array_lists_values">
        <item>20</item>
        <item>28</item>
        <item>34</item>
    </string-array>

    <string-array name="font_array_goods_values">
        <item>18</item>
        <item>22</item>
        <item>26</item>
    </string-array>

</resources>
