<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:title="@string/lists"
            android:icon="@mipmap/ic_list_black_24dp"
            android:id="@+id/drawer_Lists_Item_menu"
            />
        <item
            android:title="@string/calendar"
            android:icon="@mipmap/ic_event_black_24dp"
            android:id="@+id/drawer_Calendar_Item_menu"
            />
        <item
            android:id="@+id/drawer_Invitations_Item_menu"
            android:title="@string/invitations"
            android:icon="@drawable/invitations_drawer_icon"
            />

        <item
            android:title="@string/settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:id="@+id/drawer_Settings_Item_menu"
            />
    </group>
    <item android:title="@string/exit">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:title="@string/logOut"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"
                android:id="@+id/drawer_LogOut_Item_menu"
                />
            </group>
        </menu>
    </item>

</menu>